[gd_scene load_steps=3 format=3 uid="uid://drh4n0f1sp6go"]

[ext_resource type="Script" path="res://Prefab/Entities/Projectiles/enemy_melee_hit_box.gd" id="1_65fkk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3koys"]
radius = 101.316

[node name="EnemyMeleeHitBox" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_65fkk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3koys")
debug_color = Color(0.834964, 0.00129241, 0.934425, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
